完成查詢老師的課表

--- a/course-main/src/main/resources/static/student.html
+++ b/course-main/src/main/resources/static/student.html
@@ -46,7 +46,13 @@
 							<a class="nav-link" href="#" link-page="student_score"><i class="fas fa-graduation-cap"></i> 成績查詢</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" link-page="student_schedule"><i class="fas fa-calendar-alt" style="font-size: 22px;"></i> &nbsp;課表查詢</a>
+							<a class="nav-link" href="#" link-page="student_schedule"><i class="fas fa-user-graduate" style="font-size: 22px;"></i> &nbsp;學生課表</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="teacher_schedule"><i class="fas fa-chalkboard-teacher" style="font-size: 22px;"></i> &nbsp;老師課表</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="class_schedule"><i class="fas fa-school" style="font-size: 22px;"></i> &nbsp;班級課表</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#" link-page="course_select"><i class="fas fa-chalkboard-teacher"></i> 選課系統</a>
