--- a/course-main/src/main/resources/static/student.html
+++ b/course-main/src/main/resources/static/student.html
@@ -51,11 +51,11 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#" link-page="teacher_schedule"><i class="fas fa-chalkboard-teacher" style="font-size: 22px;"></i> &nbsp;老師課表</a>
 						</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#" link-page="class_schedule"><i class="fas fa-school" style="font-size: 22px;"></i> &nbsp;班級課表</a>
-						</li>
+						</li> -->
 						<li class="nav-item">
-							<a class="nav-link" href="#" link-page="course_select"><i class="fas fa-chalkboard-teacher"></i> 選課系統</a>
+							<a class="nav-link" href="#" link-page="course_select"><i class="fas fa-clipboard-list"></i> 選課系統</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> 退出系統</a>
