--- a/course-web/forget.html
+++ b/course-web/forget.html
@@ -198,7 +198,7 @@
             }).then((result) => {
                 if (result.isConfirmed) {
                     if (state) {
-                        window.location.href = `${ip}/index.html`;
+                        window.location.href = `./index.html`;
                     }
                 }
             });
