--- a/course-web/teacher.html
+++ b/course-web/teacher.html
@@ -32,6 +32,9 @@
 							<a class="nav-link" href="#" link-page="teacher_course"><i class="fas fa-graduation-cap"></i> 課程編輯</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" href="#" link-page="teacher_schedule"><i class="fas fa-chalkboard-teacher" style="font-size: 22px;"></i> &nbsp;老師課表</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#" link-page="teacher_score"><i class="fas fa-calendar-alt"></i> 成績批改</a>
 						</li>
 						<li class="nav-item">
