修改匯入課程的BUT

--- a/course-web/teacher/teacher_course.html
+++ b/course-web/teacher/teacher_course.html
@@ -11,7 +11,8 @@
                 <th>學期</th>                
                 <th>科系</th>
                 <th>班級</th>
-                <th>課名</th>                
+                <th>課名</th>
+                <th>地點</th>
                 <th>編輯</th>
             </tr>
         </thead>
@@ -25,6 +26,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="courseModalLabel">課程訊息</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="courseForm" action="">
                 <input type="hidden" name="courseIndex" id="courseIndex">
