--- a/course-web/root/root_course_manager.html
+++ b/course-web/root/root_course_manager.html
@@ -103,6 +103,7 @@
         $('select[name="depId"]').each(function() {
             if (!$(this).attr('id')) {
                 $(this).on('change', async function() {
+                    $('#selectAll').prop('checked', false);
                     await searchCourse();
                     bindPage('courseBody');
                     $('#page_length').trigger('change', [1]);
